# crypto_trading

./: .env.template  .gitignore  Dockerfile  app.py  config.py  container.py  crypto_currency_app.py  factory.py  index.py  logger.py  main.py  pyproject.toml  requirements.txt  server.py  setting.json  system_starter.bat  test.py  trading_application.py  trigger.py  validation_check.py
.github/workflows/: github-action.yaml
data/: crypto_buy_history.csv  crypto_buy_sell_history.csv  crypto_history.csv  crypto_sell_history.csv
model/: crypto.py  trade.py
repository/: crypto_currency_repository.py  crypto_repository.py  trading_repository.py
service/: ai_service.py  aws_service.py  crypto_currency_service.py  crypto_service.py  llm_service.py  mail_service.py  trading_service.py
util/: common_util.py  crypto_currency_util.py  crypto_util.py  refresh.py  trade_util.py
